# traffic-monitor

./: .gitignore  .gitmodules  CMakeLists.txt  TrafficClass.py  TrtTrafficCamNet.py  data-convert-spec.conf  demo.py  infer_demo.sh  infer_spec.txt  main.ipynb  main.py  run_jupyter.sh  test.py  traffic-ai.ipynb
TrafficCamNet/: Specification.txt  convert.sh
src/cpp/: CMakeLists.txt  Core.cpp  Core.h  DetectNetEngine.cpp  DetectNetEngine.h  SSDRes18Engine.cpp  SSDRes18Engine.h  TrafficDetect.cpp  TrtEngine.cpp  TrtEngine.h  TrtTrafficDetect.cpp  TrtTrafficDetectSSD.cpp  Yolo5Engine.cpp  Yolo5Engine.h  demo.cpp
src/python/: TrtTrafficCamNet.py  main.py
src/python/utils/: visualization.py
src/python/utils/.ipynb_checkpoints/: ssd_classes-checkpoint.py
ssd/: ssd_resnet18_spec.txt
utils/: visualization.py
utils/.ipynb_checkpoints/: ssd-checkpoint.py
yolo/: convert-kitti-to-yolo.py  dataset.yaml
